--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <title>Biomercs</title>
     <base href="/" />
+    <meta
+      name="description"
+      content="Biomercs is the unofficial site to store scores from the mini game The Mercenaries (Resident Evil)"
+    />
+    <meta name="author" content="stLmpp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
