- fixed icon on ios (closes #53)

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/icon-192x192.png" />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#1976d2" />
   </head>
